# vapp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  debug.keystore  proguard-rules.pro  release.keystore
app/src/main/: AndroidManifest.xml
app/src/main/java/com/virtualspace/: MainActivity.kt  SplashActivity.kt  VirtualSpaceApplication.kt
app/src/main/java/com/virtualspace/app/: MainActivity.kt  SplashActivity.kt  VirtualSpaceApplication.kt
app/src/main/java/com/virtualspace/provider/: BinderProvider.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
hooklib/: build.gradle  proguard-rules.pro
lib/: build.gradle  consumer-rules.pro  proguard-rules.pro
lib/src/main/cpp/: CMakeLists.txt
lib/src/main/cpp/Foundation/: IORelocator.cpp  IORelocator.h  ProcessManager.cpp  ProcessManager.h  SystemCallHook.cpp  SystemCallHook.h
lib/src/main/cpp/Substrate/: ARM64Hook.cpp  ARM64Hook.h  ARMHook.cpp  ARMHook.h  SubstrateHook.cpp  SubstrateHook.h
lib/src/main/cpp/utils/: FileUtils.cpp  FileUtils.h  LogUtils.cpp  LogUtils.h  StringUtils.cpp  StringUtils.h
lib/src/main/java/com/lody/virtual/: BinderProvider.java  HookWrapper.java  IOUniformer.java  (+8 more)
xposedcompat/: build.gradle  proguard-rules.pro
(+30 files in other folders)
